contrast issue

--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -119,7 +119,7 @@ nav a:hover {
 
 nav li.selected a { 
     background-color: #52796f; 
-    color: #cad2c5;
+    color: #f6f8f5;
 }
 
 section img {
